kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tksimeji-com-service
spec:
  type: ClusterIP
  selector:
    app: tksimeji-com
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
