kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tksimeji-com-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  rules:
  - host: tksimeji.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tksimeji-com-service
            port:
              number: 80
